; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c___sigwait.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_sig.c___sigwait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__sigwait_args = type { i32 }
%struct.__sigwait_nocancel_args = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__sigwait(i32 %0, %struct.__sigwait_args* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.__sigwait_args*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.__sigwait_args* %1, %struct.__sigwait_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = call i32 @__pthread_testcancel(i32 1)
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.__sigwait_args*, %struct.__sigwait_args** %5, align 8
  %10 = bitcast %struct.__sigwait_args* %9 to %struct.__sigwait_nocancel_args*
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @__sigwait_nocancel(i32 %8, %struct.__sigwait_nocancel_args* %10, i32* %11)
  ret i32 %12
}

declare dso_local i32 @__pthread_testcancel(i32) #1

declare dso_local i32 @__sigwait_nocancel(i32, %struct.__sigwait_nocancel_args*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
